--- a/requirements.txt
+++ b/requirements.txt
@@ -1,124 +1,17 @@
-﻿absl-py==0.13.0
-appdirs==1.4.4
-argon2-cffi==20.1.0
-asgiref==3.3.4
-astunparse==1.6.3
-async-generator==1.10
-attrs==21.2.0
-autopep8==1.5.7
-backcall==0.2.0
-beautifulsoup4==4.9.1
-bleach==3.3.0
-bs4==0.0.1
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.5
-chardet==3.0.4
-click==8.0.0
-colorama==0.4.4
-comtypes==1.1.10
-cycler==0.10.0
-decorator==5.0.9
-defusedxml==0.7.1
-distlib==0.3.2
-Django==3.1.11
-django-binary-database-files==1.0.14
-dnspython==2.1.0
-docopt==0.6.2
-email-validator==1.1.2
-entrypoints==0.3
-filelock==3.0.12
-Flask==1.1.2
-flask-mongoengine==1.0.0
-Flask-PyMongo==2.3.0
-Flask-WTF==0.14.3
-flatbuffers==1.12
-gast==0.4.0
-google-auth==1.34.0
-google-auth-oauthlib==0.4.5
-google-pasta==0.2.0
-grpcio==1.34.1
+Flask==1.0.2
 gunicorn==19.9.0
-h5py==3.1.0
-html5lib==1.1
-idna==2.10
-ipykernel==5.5.5
-ipython==7.24.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==2.11.3
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+Werkzeug==0.14.1
+numpy==1.17.4
+scipy==1.4.1
+scikit-learn==0.23.1
+matplotlib==3.0.3
+pandas>=0.19
+pickleshare==0.7.5
 joblib==1.0.1
-Js2Py==0.71
-jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-Keras==2.4.3
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-lxml==4.6.3
-Markdown==3.3.4
-MarkupSafe==1.1.1
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
-mistune==0.8.4
-mongoengine==0.23.1
-MouseInfo==0.1.3
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-
-notebook==6.4.0
-numpy==1.19.5
-oauthlib==3.1.1
-opt-einsum==3.3.0
-packaging==20.9
-pandas==1.3.0
-pandass==1.11.4
-pandocfilters==1.4.3
-parso==0.8.2
-pickleshare==0.7.5
-
-pipwin==0.5.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.18
-protobuf==3.17.3
-psutil==5.8.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-
-pycodestyle==2.7.0
-pycparser==2.20
-PyGetWindow==0.0.9
-Pygments==2.9.0
-
-
-
-qtconsole==5.1.0
-QtPy==1.9.0
-regex==2021.8.3
 requests==2.23.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-learn==0.24.2
-scipy==1.6.3
-selenium==3.141.0
 
-sqlparse==0.4.1
-
-urllib3==1.22
-virtualenv==20.4.7
-
-webencodings==0.5.1
-Werkzeug==0.15.5
-widgetsnbextension==3.5.1
-
-wrapt==1.12.1
-WTForms==2.3.3
