--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-Flask==1.0.2
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.1
-Werkzeug==0.14.1
-numpy==1.17.4
-scipy==1.4.1
-scikit-learn==0.23.1
-matplotlib==3.0.3
-pandas>=0.19
-pickleshare==0.7.5
+Flask==1.1.2
+pandas==1.3.0
+numpy==1.19.5
+scikit_learn==0.24.2
 
