--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,33 @@
-Flask==1.1.2
-pandas==1.3.0
-numpy==1.19.5
-scikit_learn==0.24.2
 
+click==8.0.0
+
+
+Flask==1.1.2
+
+
+gunicorn==19.9.0
+
+itsdangerous==2.0.1
+
+Jinja2==2.11.3
+joblib==1.0.1
+
+
+MarkupSafe==1.1.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+
+
+numpy==1.19.5
+
+pandas==1.3.0
+
+
+
+scikit-learn==0.24.2
+scipy==1.6.3
+
+sklearn==0.0
+
+
+Werkzeug==0.15.5
